# image-compressor

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  requirements.txt
.history/src/: main_20251112115022.py  main_20251112115835.py  main_20251112115838.py  main_20251112115841.py  main_20251112115842.py  main_20251112115846.py  main_20251112115936.py  main_20251112115938.py  main_20251112115940.py  main_20251112115943.py  main_20251112115949.py  main_20251112115951.py  main_20251112115953.py  main_20251112120212.py  main_20251112120219.py  main_20251112120221.py  main_20251112120223.py  main_20251115220357.py  main_20251115220358.py  main_20251115220559.py  main_20251115220621.py  main_20251115220623.py  main_20251115220626.py  main_20251115220630.py  main_20251115220636.py  main_20251115220639.py  main_20251115220642.py  main_20251115220654.py  main_20251115220655.py  main_20251115220657.py  main_20251115220658.py  main_20251115220704.py  main_20251115220707.py  main_20251115220709.py  main_20251115220711.py  main_20251115220714.py  main_20251115220716.py  main_20251115220725.py  main_20251115221802.py  main_20251115221804.py  (+30 more)
.history/src/image_compressor/: __init___20251112115129.py  __init___20251112115137.py  __init___20251112115148.py  __init___20251112115155.py  __init___20251112115222.py  __init___20251112115225.py  __init___20251112115226.py  __init___20251112115228.py  __init___20251112115229.py  __init___20251112115234.py  (+104 more)
src/: main.py
src/image_compressor/: __init__.py  compress_image.py  preprocess_image.py
